# Smart-Greenhouse-System--ESP32-

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/lvgl_driver/: CMakeLists.txt  lvgl_driver.c  lvgl_driver.h
components/mqtt_client/: CMakeLists.txt  mqtt_client.c  mqtt_client.h
components/toucholed/: CMakeLists.txt  ft6336u.c  ft6336u.h  st7789.c  st7789.h
components/uart_manager/: CMakeLists.txt  uart.c  uart.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  SmartGreenhouse.c  idf_component.yml
